fix: copyright year

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <h1>Home</h1>
         </div>
         <div class="footer">
-            <p>&copy; 2024</p>
+            <p>&copy; 1998 - 2024</p>
         </div>
     </div>
 </html>
